# compras-custo-beneficio

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  pages.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  logging.py
backend/app/exports/: excel.py
backend/app/history/: store.py
backend/app/models/: orm.py
backend/app/providers/: amazon.py  base.py  demo_loader.py  importadireto_demo.py  megaloja_demo.py  mercadolivre.py  registry.py  vtex.py
backend/app/ranking/: scorer.py
backend/app/reputation/: adapter.py
backend/app/schemas/: models.py
backend/app/services/: cep.py  demo_seed.py  equivalence.py  interpreter.py  pricing.py  search.py
backend/requirements/: base.txt  dev.txt
backend/tests/: conftest.py  test_cep.py  test_equivalence.py  test_history.py  test_interpreter.py  test_pricing.py  test_ranking.py  test_search_flow.py  test_sources_real.py
data/demo/: products.json
docs/: arquitetura.md  fontes-de-dados.md  implantacao.md  metodologia-ranking.md  privacidade.md  regras-de-negocio.md  requisitos-funcionais.md  roadmap.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/scripts-node/: gerar-pdf-de-busca.ts  gerar-pdf-demo.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/tests/: format.test.ts  pdf.test.ts
scripts/: dev.ps1  dev.sh
(+22 files in other folders)
